Add maven2 build instructions to readme